Fix the source overflow CSS element name

--- a/org/style.css
+++ b/org/style.css
@@ -36,7 +36,7 @@ p {
     text-align: justify;
 }
 
-pre {
+pre.src {
     overflow: hidden;
 }
 
